--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -1,8 +1,8 @@
 name: MNE-Python
-version: 0.24.1_installer-2021.2
+version: 0.24.1_installer-2022.1
 company: MNE-Python Developers
 
-environment_file: mne-python_0.24.1_env.yml
+# environment_file: mne-python_0.24.1_env.yml
 license_file: ../../LICENSE
 
 initialize_by_default: False
@@ -12,9 +12,9 @@ default_prefix: ${USERPROFILE}\mne-python\0.24.1  # [win]
 uninstall_name: MNE-Python 0.24.1 (${VERSION}, Python ${PYVERSION})
 
 installer_type: pkg  # [osx]
-installer_filename: MNE-Python-0.24.1_installer-2021.2-macOS.pkg    # [osx]
-installer_filename: MNE-Python-0.24.1_installer-2021.2-Windows.exe  # [win]
-installer_filename: MNE-Python-0.24.1_installer-2021.2-Linux.sh     # [linux]
+installer_filename: MNE-Python-0.24.1_installer-2022.1-macOS.pkg    # [osx]
+installer_filename: MNE-Python-0.24.1_installer-2022.1-Windows.exe  # [win]
+installer_filename: MNE-Python-0.24.1_installer-2022.1-Linux.sh     # [linux]
 
 channels:
   - conda-forge
