--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,6 @@ channels:
 dependencies:
  - constructor
 # https://github.com/conda/constructor/pull/477
- - pip
- - pip:
-   - https://github.com/conda/constructor/archive/refs/heads/fix-env-mode.zip
+#  - pip
+#  - pip:
+#    - https://github.com/conda/constructor/archive/refs/heads/fix-env-mode.zip
