Specify output dir

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,17 +46,17 @@ jobs:
           conda info
           mamba env list
           mamba list
-          constructor recipes/mne-python_0.24
+          constructor --output-dir=~ recipes/mne-python_0.24
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
         run: |
-          installer -pkg MNE-Python-0.24.1_installer-2021.2-macOS.pkg -target CurrentUserHomeDirectory
+          installer -pkg ./MNE-Python-0.24.1_installer-2021.2-macOS.pkg -target CurrentUserHomeDirectory
 
       - name: Run installer (Linux)
         if: ${{ runner.os == 'Linux' }}
         run: |
-          sh ./MNE-Python-0.24.1_installer-2021.2-Linux.sh -b
+          sh ~/MNE-Python-0.24.1_installer-2021.2-Linux.sh -b
 
       # https://docs.anaconda.com/anaconda/install/silent-mode.html
       - name: Run installer (Windows)
