--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,8 +46,8 @@ jobs:
           conda info
           mamba env list
           mamba list
-          mkdir -p ~/.conda/constructor/linux-64
-          constructor --output-dir=/home/runner/work recipes/mne-python_0.24
+          mkdir ~/cache
+          constructor --output-dir=/home/runner/work --cache-dir=/home/runner/cache recipes/mne-python_0.24
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
