--- a/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
+++ b/recipes/mne-python_0.24/mne-python_0.24.1_env.yml
@@ -24,3 +24,5 @@ dependencies:
 - darkdetect
 - qdarkstyle
 - dcm2niix
+- pip:
+  - https://github.com/conda/constructor/archive/refs/heads/fix-env-mode.zip
