Set working directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,7 @@ jobs:
         if: |
           github.ref_type == 'tag' &&
           (matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2019')
+        working-directory: /home/runner/work
         uses: ncipollo/release-action@v1
         with:
           artifacts: "MNE-Python-*installer*.*"
