--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Run installer (Linux)
         if: ${{ runner.os == 'Linux' }}
         run: |
-          sh ~/work/MNE-Python-0.24.1_installer-2022.1-Linux.sh -b
+          sh ./MNE-Python-0.24.1_installer-2022.1-Linux.sh -b
 
       # https://docs.anaconda.com/anaconda/install/silent-mode.html
       - name: Run installer (Windows)
