--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,9 @@ jobs:
 
       - name: Run installer (Linux)
         if: ${{ runner.os == 'Linux' }}
+        shell: bash -l {0}
         run: |
+          echo `pwd`
           sh ./MNE-Python-0.24.1_installer-2022.1-Linux.sh -b
 
       # https://docs.anaconda.com/anaconda/install/silent-mode.html
