--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,8 @@ jobs:
           conda info
           mamba env list
           mamba list
-          constructor --verbose --output-dir=/home/runner --cache-dir=/home/runner/cache recipes/mne-python_0.24
+          echo `pwd`
+          constructor --verbose --cache-dir=/home/runner/cache recipes/mne-python_0.24
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
