Use "spec" section and forked constructor from jaimergp

--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -1,9 +1,11 @@
 name: MNE-Python
-version: 0.24.1_installer-2021.2
+version: 0.24.1_installer-2022.2
 company: MNE-Python Developers
 
-environment_file: mne-python_0.24.1_env.yml
 license_file: ../../LICENSE
+welcome_image: ../../assets/mne.png
+welcome_file: ../../assets/welcome.rtf
+readme_text: ""
 
 initialize_by_default: False
 register_python_default: False
@@ -12,12 +14,33 @@ default_prefix: ${USERPROFILE}\mne-python\0.24.1  # [win]
 uninstall_name: MNE-Python 0.24.1 (${VERSION}, Python ${PYVERSION})
 
 installer_type: pkg  # [osx]
-installer_filename: MNE-Python-0.24.1_installer-2021.2-macOS.pkg    # [osx]
-installer_filename: MNE-Python-0.24.1_installer-2021.2-Windows.exe  # [win]
-installer_filename: MNE-Python-0.24.1_installer-2021.2-Linux.sh     # [linux]
+installer_filename: MNE-Python-0.24.1_installer-2022.2-macOS.pkg    # [osx]
+installer_filename: MNE-Python-0.24.1_installer-2022.2-Windows.exe  # [win]
+installer_filename: MNE-Python-0.24.1_installer-2022.2-Linux.sh     # [linux]
 
 channels:
   - conda-forge
+
+specs:
+  - mne ==0.24.1
+  - mne-bids ==0.9
+  - python ==3.9
+  - pip
+  - conda
+  - miniforge_console_shortcut  # [win]
+  - mamba
+  - jupyter
+  - jupyterlab
+  - ipykernel
+  - nb_conda_kernels
+  - spyder-kernels >=1.10.0
+  - spyder
+  - ipympl
+  - ipywidgets
+  - ipyvtklink
+  - darkdetect
+  - qdarkstyle
+  - dcm2niix
 
 condarc:
   channels:
