--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           source ~/mne-python/bin/activate
           conda info
-          mamba env export
+          mamba list
           mne sys_info
 
       - name: Check installation (Linux)
@@ -70,7 +70,7 @@ jobs:
           sudo apt-get install -y xvfb
           source ~/mne-python/0.24.1/bin/activate
           conda info
-          mamba env export
+          mamba list
           xvfb-run mne sys_info
 
       - name: Check installation (Windows)
@@ -83,7 +83,7 @@ jobs:
           . "$MneRoot\shell\condabin\conda-hook.ps1"
           conda activate $MneRoot
           conda info
-          mamba env export
+          mamba list
           . "$MneRoot\Scripts\mne.exe" sys_info
 
       # - name: Archive artifacts
