--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,11 @@
 name: constructor-env
 
 channels:
-- conda-forge
+  - napari/label/bundle_tools
+  - conda-forge
 
 dependencies:
- - constructor
-# https://github.com/conda/constructor/pull/477
- - pip
- - pip:
-   - https://github.com/conda/constructor/archive/refs/heads/fix-env-mode.zip
+  - constructor
+  - conda-standalone 
+  - menuinst
+  - conda
