Use "spec" section and forked constructor from jaimergp (#26)
* Use "spec" section and forked constructor from jaimergp

* Relax version constraints

* Print pwd

* Fix path

* Simplify

* Rework channel priority

* Add NeuroSpin dependencies

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,41 +34,29 @@ jobs:
           environment-file: environment.yml
           micromamba-version: latest
 
-      - name: Create MNE environment
-        shell: bash -l {0}
-        run: |
-          echo `pwd`
-          ls
-          mamba env create -f recipes/mne-python_0.24/mne-python_0.24.1_env.yml -p ~/mne_env
-
       - name: Build installer
         shell: bash -l {0}
         run: |
-          source ~/mne_env/bin/activate
-          conda info
-          mamba env list
-          mamba list
-          echo `pwd`
-          constructor --verbose --cache-dir=/home/runner/cache recipes/mne-python_0.24
+          constructor recipes/mne-python_0.24
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
         run: |
-          installer -pkg ./MNE-Python-0.24.1_installer-2022.1-macOS.pkg -target CurrentUserHomeDirectory
+          echo `pwd`
+          installer -pkg MNE-Python-0.24.1_installer-2022.2-macOS.pkg -target CurrentUserHomeDirectory
 
       - name: Run installer (Linux)
         if: ${{ runner.os == 'Linux' }}
-        shell: bash -l {0}
         run: |
           echo `pwd`
-          sh ./MNE-Python-0.24.1_installer-2022.1-Linux.sh -b
+          sh ./MNE-Python-0.24.1_installer-2022.2-Linux.sh -b
 
       # https://docs.anaconda.com/anaconda/install/silent-mode.html
       - name: Run installer (Windows)
         if: ${{ runner.os == 'Windows' }}
         shell: cmd  # Couldn't get PowerShell to properly perform install
         run: |
-          .\MNE-Python-0.24.1_installer-2022.1-Windows.exe /S /InstallationType=JustMe /AddToPath=1 /D=%UserProfile%\mne-python
+          .\MNE-Python-0.24.1_installer-2022.2-Windows.exe /S /InstallationType=JustMe /AddToPath=1 /D=%UserProfile%\mne-python
 
       - name: Check installation (macOS)
         if: ${{ runner.os == 'macOS' }}
