--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -3,7 +3,7 @@ name: MNE-Python_0.24.1  # [osx]
 version: 0.24.1_installer-2022.2
 company: MNE-Python Developers
 
-license_file: ../../LICENSE
+license_file: ../../assets/license.rtf
 welcome_image: ../../assets/mne.png
 welcome_file: ../../assets/welcome.rtf
 readme_text: ""
