Add more images for Windows installer

--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -4,7 +4,10 @@ version: 0.24.1_installer-2022.2
 company: MNE-Python Developers
 
 license_file: ../../LICENSE
-welcome_image: ../../assets/mne.png
+welcome_image: ../../assets/welcome_macOS.png  # [osx]
+welcome_image: ../../assets/welcome.png        # [not osx]
+header_image: ../../assets/header.png
+icon_image: ../../assets/icon.png
 welcome_file: ../../assets/welcome.rtf
 readme_text: ""
 conclusion_file: ../../assets/conclusion.rtf
