Add Openpyxl and xlrd

--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -52,6 +52,9 @@ specs:
   - ipyvtklink
   - darkdetect
   - qdarkstyle
+  # Excel I/O
+  - openpyxl
+  - xlrd
   # Helpful for statistics
   - pingouin
   # MRI viewer
