--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -33,7 +33,10 @@ channels:
 specs:
   - mne ==0.24.1
   - mne-bids =0.9
+  - mne-connectivity =0.2
+  - mne-faster =1.0
   - mne-nirs =0.1
+  - autoreject =0.3
   - python =3.9
   - pip
   - conda
@@ -50,11 +53,22 @@ specs:
   - ipyvtklink
   - darkdetect
   - qdarkstyle
+  # Excel I/O
+  - openpyxl
+  - xlrd
+  # Helpful for statistics
+  - pingouin
+  # MRI viewer
+  - fsleyes
   # NeuroSpin needs the following packages
   - questionary
   - dcm2niix
   - neurodsp
   - bycycle
+  - fooof
+  - pycircstat
+  - pactools
+  - tensorpac
 
 condarc:
   channels:
