--- a/recipes/mne-python_0.24/construct.yaml
+++ b/recipes/mne-python_0.24/construct.yaml
@@ -1,6 +1,9 @@
-name: MNE-Python         # [not osx]
-name: MNE-Python_0.24.1  # [osx]
-version: 0.24.1_installer-2022.2
+version: 0.24.1_2
+name: MNE-Python           # [not osx]
+# macOS .pkg installer defaults to ~/$NAME, so let's include the version number
+# in this path
+name: MNE-Python_0.24.1_2  # [osx]
+
 company: MNE-Python Developers
 
 license_file: ../../assets/license.rtf
@@ -15,61 +18,62 @@ conclusion_file: ../../assets/conclusion.rtf
 initialize_by_default: False
 register_python_default: False
 
-default_prefix: ${HOME}/mne-python/0.24.1                          # [unix]
-default_prefix: "%USERPROFILE%\\mne-python\\0.24.1"                # [win]
-default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\0.24.1"   # [win]
-default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\0.24.1"  # [win]
+# default_prefix will be ignored by macOS .pkg installer!
+default_prefix: ${HOME}/mne-python/0.24.1_2                          # [unix]
+default_prefix: "%USERPROFILE%\\mne-python\\0.24.1_2"                # [win]
+default_prefix_domain_user: "%LOCALAPPDATA%\\mne-python\\0.24.1_2"   # [win]
+default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\0.24.1_2"  # [win]
 
-uninstall_name: MNE-Python 0.24.1 (${VERSION}, Python ${PYVERSION})
+uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
 installer_type: pkg  # [osx]
-installer_filename: MNE-Python-0.24.1_installer-2022.2-macOS.pkg    # [osx]
-installer_filename: MNE-Python-0.24.1_installer-2022.2-Windows.exe  # [win]
-installer_filename: MNE-Python-0.24.1_installer-2022.2-Linux.sh     # [linux]
+installer_filename: MNE-Python-0.24.1_2-macOS_x64.pkg  # [osx]
+installer_filename: MNE-Python-0.24.1_2-Windows.exe    # [win]
+installer_filename: MNE-Python-0.24.1_2-Linux.sh       # [linux]
 
 channels:
   - conda-forge
 
 specs:
-  - mne ==0.24.1
-  - mne-bids =0.9
-  - mne-connectivity =0.2
-  - mne-faster =1.0
-  - mne-nirs =0.1
-  - autoreject =0.3
+  # - mne ==0.24.1
+  # - mne-bids =0.9
+  # - mne-connectivity =0.2
+  # - mne-faster =1.0
+  # - mne-nirs =0.1
+  # - autoreject =0.3
   - python =3.9
   - pip
   - conda
-  - mamba
-  - miniforge_console_shortcut  # [win]
-  - jupyter
-  - jupyterlab
-  - ipykernel
-  - nb_conda_kernels
-  - spyder-kernels >=1.10.0
-  - spyder
-  - ipympl
-  - ipywidgets
-  - ipyvtklink
-  - darkdetect
-  - qdarkstyle
-  # Excel I/O
-  - openpyxl
-  - xlrd
-  # Helpful for statistics
-  - pingouin
-  # MRI viewer
-  - fsleyes
-  # NeuroSpin needs the following packages
-  - questionary
-  - dcm2niix
-  - neurodsp
-  - bycycle
-  - fooof
-  - pycircstat
-  - pactools
-  - tensorpac
-  - emd
+  # - mamba
+  # - miniforge_console_shortcut  # [win]
+  # - jupyter
+  # - jupyterlab
+  # - ipykernel
+  # - nb_conda_kernels
+  # - spyder-kernels >=1.10.0
+  # - spyder
+  # - ipympl
+  # - ipywidgets
+  # - ipyvtklink
+  # - darkdetect
+  # - qdarkstyle
+  # # Excel I/O
+  # - openpyxl
+  # - xlrd
+  # # Helpful for statistics
+  # - pingouin
+  # # MRI viewer
+  # - fsleyes
+  # # NeuroSpin needs the following packages
+  # - questionary
+  # - dcm2niix
+  # - neurodsp
+  # - bycycle
+  # - fooof
+  # - pycircstat
+  # - pactools
+  # - tensorpac
+  # - emd
 
 condarc:
   channels:
@@ -78,4 +82,4 @@ condarc:
   #   - conda-forge
   channel_priority: strict
   allow_other_channels: False
-  env_prompt: (mne-0.24.1)
+  env_prompt: (mne-0.24.1_2)
