--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,7 @@
 name: Build the installers
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number }}-${{ github.event.ref }}
+  cancel-in-progress: true
 
 on:
   push:
@@ -21,7 +24,7 @@ jobs:
 
     continue-on-error: true
 
-    # concurrency: 
+    # concurrency:
     #   group: ${{ github.head_ref }}
     #   cancel-in-progress: true
 
