MAINT: Use concurrency (#51)
* MAINT: Use concurrency

* TST: Prove it

* Update .github/workflows/build.yml

Co-authored-by: Richard Höchenberger <richard.hoechenberger@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,7 @@
 name: Build the installers
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number }}-${{ github.event.ref }}
+  cancel-in-progress: true
 
 on:
   push:
@@ -21,9 +24,6 @@ jobs:
 
     continue-on-error: true
 
-    # concurrency: 
-    #   group: ${{ github.head_ref }}
-    #   cancel-in-progress: true
 
     steps:
       - uses: actions/checkout@v2
