--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -35,14 +35,14 @@ channels:
   - conda-forge
 
 specs:
-  - mne ==0.24.1
-  - mne-bids =0.9
+  - mne =1.0
+  - mne-bids =0.10
   - mne-connectivity =0.2
   - mne-faster =1.0
   - mne-nirs =0.1
   - mne-realtime =0.1
   - autoreject =0.3
-  - python =3.9
+  - python =3.10
   - pip
   - conda
   - mamba
