--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -45,45 +45,45 @@ channels:
   - conda-forge
 
 specs:
-  # - mne =1.0
-  # - mne-installer-menus =1.0
-  # - mne-bids =0.10
-  # - mne-connectivity =0.2
-  # - mne-faster =1.0
-  # - mne-nirs =0.1
-  # - mne-realtime =0.1
-  # - autoreject =0.3
+  - mne =1.0
+  - mne-installer-menus =1.0
+  - mne-bids =0.10
+  - mne-connectivity =0.2
+  - mne-faster =1.0
+  - mne-nirs =0.1
+  - mne-realtime =0.1
+  - autoreject =0.3
   - python =3.9
   - pip
   - conda
-  # - mamba
-  # - jupyter
-  # - jupyterlab
-  # - ipykernel
-  # - nb_conda_kernels
-  # - spyder-kernels >=1.10.0
-  # - spyder
-  # - ipympl
-  # - darkdetect
-  # - qdarkstyle
-  # # Excel I/O
-  # - openpyxl
-  # - xlrd
-  # # Statistics
-  # - pingouin
-  # - pycircstat
-  # # MRI
-  # - fsleyes
-  # - dcm2niix
-  # # Time-frequency analysis
-  # - pactools
-  # - tensorpac
-  # - emd
-  # - neurodsp
-  # - bycycle
-  # - fooof
-  # # NeuroSpin needs the following
-  # - questionary
+  - mamba
+  - jupyter
+  - jupyterlab
+  - ipykernel
+  - nb_conda_kernels
+  - spyder-kernels >=1.10.0
+  - spyder
+  - ipympl
+  - darkdetect
+  - qdarkstyle
+  # Excel I/O
+  - openpyxl
+  - xlrd
+  # Statistics
+  - pingouin
+  - pycircstat
+  # MRI
+  - fsleyes
+  - dcm2niix
+  # Time-frequency analysis
+  - pactools
+  - tensorpac
+  - emd
+  - neurodsp
+  - bycycle
+  - fooof
+  # NeuroSpin needs the following
+  - questionary
 
 condarc:
   channels:
