--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,10 @@ jobs:
 
           # import certificates to keychain
           security import $APPLICATION_CERT_PATH -P "$APPLICATION_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security find-identity -v $KEYCHAIN_PATH
           security import $INSTALLER_CERT_PATH -P "$INSTALLER_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security find-identity -v $KEYCHAIN_PATH
+
           security list-keychain -d user -s $KEYCHAIN_PATH
 
           # Avoid a password prompt; what this actually does is not properly
