--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,11 @@ jobs:
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
           # import certificates to keychain
-          # security import $APPLICATION_CERT_PATH -P "$APPLICATION_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          # security find-identity -v $KEYCHAIN_PATH
+          openssl pkcs12 -nokeys -passin pass:"$APPLICATION_CERT_PASSWORD" -in $APPLICATION_CERT_PATH | grep friendlyName
+          security import $APPLICATION_CERT_PATH -P "$APPLICATION_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security find-identity -v $KEYCHAIN_PATH
+
+          openssl pkcs12 -nokeys -passin pass:"$INSTALLER_CERT_PASSWORD" -in $INSTALLER_CERT_PATH | grep friendlyName
           security import $INSTALLER_CERT_PATH -P "$INSTALLER_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
           security find-identity -v $KEYCHAIN_PATH
 
@@ -70,7 +73,7 @@ jobs:
           security default-keychain -s $KEYCHAIN_PATH
 
           # List available signing identities
-          security find-identity -v
+          security find-identity
 
       - name: Install Micromamba
         uses: mamba-org/provision-with-micromamba@main
