--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,8 +60,8 @@ jobs:
           # security import ./AppleIncRootCertificate.cer -A -k $KEYCHAIN_PATH
           # security import ./AppleComputerRootCertificate.cer -A -k $KEYCHAIN_PATH
 
-          security add-trusted-cert -d -r trustRoot -k $KEYCHAIN_PATH ./AppleIncRootCertificate.cer
-          security add-trusted-cert -d -r trustRoot -k $KEYCHAIN_PATH ./AppleComputerRootCertificate.cer
+          security add-trusted-cert -r trustRoot -k $KEYCHAIN_PATH ./AppleIncRootCertificate.cer
+          security add-trusted-cert -r trustRoot -k $KEYCHAIN_PATH ./AppleComputerRootCertificate.cer
 
           security import ./AppleWWDRCA.cer -A -k $KEYCHAIN_PATH
 
